--- a/main.bib
+++ b/main.bib
@@ -11,7 +11,7 @@
 
 @book{fogel2005producing,
   author = {Fogel, Karl},
-  publisher = {O'Reilly Media, Inc.},
+  publisher = {O'Reilly Media, Inc},
   title = {{Producing Open Source Software: How to Run a Successful Free Software Project}},
   year = {2005},
 }
@@ -61,8 +61,8 @@
 @article{terrell2017gender,
   author = {Terrell, Josh and Kofink, Andrew and Middleton, Justin and Rainear, Clarissa and Murphy-Hill, Emerson and Parnin, Chris and Stallings, Jon},
   journal = {{PeerJ Computer Science}},
-  pages = {e111},
-  publisher = {PeerJ Inc.},
+  pages = {111},
+  publisher = {PeerJ Inc},
   title = {{Gender Differences and Bias in Open Source: Pull Request Acceptance of Women Versus Men}},
   volume = {3},
   year = {2017},
@@ -139,7 +139,7 @@
 @article{li2021code,
   author = {Li, Renee and Pandurangan, Pavitthra and Frluckaj, Hana and Dabbish, Laura},
   journal = {{Proceedings of the ACM on Human-Computer Interaction}},
-  number = {CSCW1},
+  number = {1},
   pages = {1--31},
   publisher = {ACM},
   title = {{Code of Conduct Conversations in Open Source Software Projects on Github}},
@@ -159,7 +159,7 @@
 @article{ferreira2021shut,
   author = {Ferreira, Isabella and Cheng, Jinghui and Adams, Bram},
   journal = {{Proceedings of the ACM on Human-Computer Interaction}},
-  number = {CSCW2},
+  number = {2},
   pages = {1--35},
   publisher = {ACM},
   title = {{The ``Shut the F** K Up'' Phenomenon: Characterizing Incivility in Open Source Code Review Discussions}},
@@ -170,9 +170,9 @@
 @article{warschauer1995comparing,
   author = {Warschauer, Mark},
   journal = {{CALICO Journal}},
-  pages = {26--7},
+  pages = {7--26},
   publisher = {JSTOR},
-  title = {{Comparing Face-To-Face and Electronic Discussion in the Second Language Classroom}},
+  title = {{Comparing Face-еo-Face and Electronic Discussion in the Second Language Classroom}},
   year = {1995},
 }
 
@@ -499,7 +499,7 @@
   journal = {{Journal of Systems and Software}},
   pages = {110806},
   publisher = {Elsevier},
-  title = {{Does Code Quality Affect Pull Request Acceptance? an Empirical Study}},
+  title = {{Does Code Quality Affect Pull Request Acceptance? An Empirical Study}},
   volume = {171},
   year = {2021},
 }
@@ -561,226 +561,226 @@
 }
 
 @article{engelfriet2009choosing,
-  title={{Choosing an Open Source License}},
-  author={Engelfriet, Arnoud},
-  journal={{IEEE Software}},
-  volume={27},
-  number={1},
-  pages={48--49},
-  year={2009},
-  publisher={IEEE},
-  doi={10.1109/MS.2010.5}
+  author = {Engelfriet, Arnoud},
+  doi = {10.1109/MS.2010.5},
+  journal = {{IEEE Software}},
+  number = {1},
+  pages = {48--49},
+  publisher = {IEEE},
+  title = {{Choosing an Open Source License}},
+  volume = {27},
+  year = {2009},
 }
 
 @misc{stallman1985gnu,
-  title={{The GNU Manifesto}},
-  author={Stallman, Richard},
-  year={1985}
+  author = {Stallman, Richard},
+  title = {{The GNU Manifesto}},
+  year = {1985},
 }
 
 @misc{github2015licenses,
   author = {Balter, Ben},
   howpublished = {\url{https://github.blog/2015-03-09-open-source-license-usage-on-github-com/}},
-  month = {March},
+  month = {mar},
   note = {[Online; accessed 20-03-2024]},
-  title = {{Open source license usage on GitHub.com}},
+  title = {{Open Source License Usage on {GitHub.com}}},
   year = {2015},
 }
 
 @misc{balter2014rules,
   author = {Balter, Ben},
   howpublished = {\url{https://ben.balter.com/2014/11/06/rules-of-communicating-at-github/}},
-  month = {November},
+  month = {nov},
   note = {[Online; accessed 22-03-2024]},
-  title = {{15 rules for communicating at GitHub}},
+  title = {{15 Rules for Communicating at GitHub}},
   year = {2014},
 }
 
 @article{lin2006open,
-  title={{Open Source Licenses and the Creative Commons Framework: License Selection and Comparison}},
-  author={Lin, Yi-Hsuan and Ko, Tung-Mei and Chuang, Tyng-Ruey and Lin, Kwei-Jay and others},
-  journal={{Journal of Information Science and Engineering}},
-  volume={22},
-  number={1},
-  pages={1--17},
-  year={2006},
-  publisher={Citeseer}
+  author = {Lin, Yi-Hsuan and Ko, Tung-Mei and Chuang, Tyng-Ruey and Lin, Kwei-Jay and others},
+  journal = {{Journal of Information Science and Engineering}},
+  number = {1},
+  pages = {1--17},
+  publisher = {Citeseer},
+  title = {{Open Source Licenses and the Creative Commons Framework: License Selection and Comparison}},
+  volume = {22},
+  year = {2006},
 }
 
 @misc{bugayenko2014blog0721,
   author = {Bugayenko, Yegor},
-  title = {{Master Branch Must Be Read-Only}},
   howpublished = {\url{https://www.yegor256.com/140721.html}},
+  month = {jul},
+  note = {[Online; accessed 05-03-2024]},
+  title = {{Master Branch Must Be Read-Only}},
   year = {2014},
-  month = {July},
-  note = {[Online; accessed 05-03-2024]}
 }
 
 @misc{bugayenko2019blog0423,
   author = {Bugayenko, Yegor},
-  title = {{Elegant READMEs}},
   howpublished = {\url{https://www.yegor256.com/190423.html}},
+  month = {apr},
+  note = {[Online; accessed 05-03-2024]},
+  title = {{Elegant READMEs}},
   year = {2019},
-  month = {April},
-  note = {[Online; accessed 05-03-2024]}
 }
 
 @article{prana2019categorizing,
-  title={{Categorizing the Content of GitHub README Files}},
-  author={Prana, Gede Artha Azriadi and Treude, Christoph and Thung, Ferdian and Atapattu, Thushari and Lo, David},
-  journal={{Empirical Software Engineering}},
-  volume={24},
-  pages={1296--1327},
-  year={2019},
-  publisher={Springer},
-  doi={10.1007/s10664-018-9660-3}
+  author = {Prana, Gede Artha Azriadi and Treude, Christoph and Thung, Ferdian and Atapattu, Thushari and Lo, David},
+  doi = {10.1007/s10664-018-9660-3},
+  journal = {{Empirical Software Engineering}},
+  pages = {1296--1327},
+  publisher = {Springer},
+  title = {{Categorizing the Content of GitHub README Files}},
+  volume = {24},
+  year = {2019},
 }
 
 @inproceedings{tourani2017code,
-  title={{Code of Conduct in Open Source Projects}},
-  author={Tourani, Parastou and Adams, Bram and Serebrenik, Alexander},
-  booktitle={{Proceedings of the 24th International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
-  pages={24--33},
-  year={2017},
-  organization={IEEE},
-  doi={10.1109/SANER.2017.7884606}
+  author = {Tourani, Parastou and Adams, Bram and Serebrenik, Alexander},
+  booktitle = {{Proceedings of the 24th International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  doi = {10.1109/SANER.2017.7884606},
+  organization = {IEEE},
+  pages = {24--33},
+  title = {{Code of Conduct in Open Source Projects}},
+  year = {2017},
 }
 
 @inproceedings{kinsman2021software,
-  title={{How Do Software Developers Use GitHub Actions to Automate Their Workflows?}},
-  author={Kinsman, Timothy and Wessel, Mairieli and Gerosa, Marco A and Treude, Christoph},
-  booktitle={Proceedings of the 18th International Conference on Mining Software Repositories (MSR)},
-  pages={420--431},
-  year={2021},
-  organization={IEEE},
+  author = {Kinsman, Timothy and Wessel, Mairieli and Gerosa, Marco A. and Treude, Christoph},
+  booktitle = {{Proceedings of the 18th International Conference on Mining Software Repositories (MSR)}},
   doi = {10.1109/MSR52588.2021.00054},
+  organization = {IEEE},
+  pages = {420--431},
+  title = {{How Do Software Developers Use GitHub Actions to Automate Their Workflows?}},
+  year = {2021},
 }
 
 @inproceedings{decan2022use,
-  title={{On the Use of GitHub Actions in Software Development Repositories}},
-  author={Decan, Alexandre and Mens, Tom and Mazrae, Pooya Rostami and Golzadeh, Mehdi},
-  booktitle={Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)},
-  pages={235--245},
-  year={2022},
-  organization={IEEE},
-  doi={10.1109/ICSME55016.2022.00029}
+  author = {Decan, Alexandre and Mens, Tom and Mazrae, Pooya Rostami and Golzadeh, Mehdi},
+  booktitle = {{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
+  doi = {10.1109/ICSME55016.2022.00029},
+  organization = {IEEE},
+  pages = {235--245},
+  title = {{On the Use of GitHub Actions in Software Development Repositories}},
+  year = {2022},
 }
 
 @inproceedings{liu2022first,
-  title={{A First Look at CI/CD Adoptions in Open-Source Android Apps}},
-  author={Liu, Pei and Sun, Xiaoyu and Zhao, Yanjie and Liu, Yonghui and Grundy, John and Li, Li},
-  booktitle={{Proceedings of the 37th International Conference on Automated Software Engineering}},
-  pages={1--6},
-  year={2022},
-  doi={10.1145/3551349.3561341}
+  author = {Liu, Pei and Sun, Xiaoyu and Zhao, Yanjie and Liu, Yonghui and Grundy, John and Li, Li},
+  booktitle = {{Proceedings of the 37th International Conference on Automated Software Engineering}},
+  doi = {10.1145/3551349.3561341},
+  pages = {1--6},
+  title = {{A First Look at CI/CD Adoptions in Open-Source Android Apps}},
+  year = {2022},
 }
 
 @inproceedings{golzadeh2022rise,
-  title={{On the rise and fall of CI services in GitHub}},
-  author={Golzadeh, Mehdi and Decan, Alexandre and Mens, Tom},
-  booktitle={{Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
-  pages={662--672},
-  doi={10.1109/SANER53432.2022.00084},
-  year={2022},
-  organization={IEEE}
+  author = {Golzadeh, Mehdi and Decan, Alexandre and Mens, Tom},
+  booktitle = {{Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER)}},
+  doi = {10.1109/SANER53432.2022.00084},
+  organization = {IEEE},
+  pages = {662--672},
+  title = {{On the Rise and Fall of CI Services in GitHub}},
+  year = {2022},
 }
 
 @inproceedings{durieux2020empirical,
-  title={{Empirical Study of Restarted and Flaky Builds on Travis CI}},
-  author={Durieux, Thomas and Le Goues, Claire and Hilton, Michael and Abreu, Rui},
-  booktitle={{Proceedings of the 17th International Conference on Mining Software Repositories}},
-  pages={254--264},
-  year={2020},
-  doi={10.1145/3379597.3387460}
+  author = {Durieux, Thomas and Le Goues, Claire and Hilton, Michael and Abreu, Rui},
+  booktitle = {{Proceedings of the 17th International Conference on Mining Software Repositories}},
+  doi = {10.1145/3379597.3387460},
+  pages = {254--264},
+  title = {{Empirical Study of Restarted and Flaky Builds on Travis CI}},
+  year = {2020},
 }
 
 @misc{bugayenko2023blog0822,
   author = {Bugayenko, Yegor},
-  title = {{Fast Tests Help Humans, Deep Tests Help Servers}},
   howpublished = {\url{https://www.yegor256.com/230822.html}},
+  month = {aug},
+  note = {[Online; accessed 05-03-2024]},
+  title = {{Fast Tests Help Humans, Deep Tests Help Servers}},
   year = {2023},
-  month = {August},
-  note = {[Online; accessed 05-03-2024]}
 }
 
 @inproceedings{beller2017oops,
-  title={{Oops, My Tests Broke the Build: An Explorative Analysis of Travis CI with GitHub}},
-  author={Beller, Moritz and Gousios, Georgios and Zaidman, Andy},
-  booktitle={{Proceedings of the 14th International Conference on Mining Software Repositories (MSR)}},
-  pages={356--367},
-  year={2017},
-  organization={IEEE},
-  doi={10.1109/MSR.2017.62}
+  author = {Beller, Moritz and Gousios, Georgios and Zaidman, Andy},
+  booktitle = {{Proceedings of the 14th International Conference on Mining Software Repositories (MSR)}},
+  doi = {10.1109/MSR.2017.62},
+  organization = {IEEE},
+  pages = {356--367},
+  title = {{Oops, My Tests Broke the Build: An Explorative Analysis of Travis CI With GitHub}},
+  year = {2017},
 }
 
 @misc{batilo2022ways,
   author = {Batilo, Aaron},
   howpublished = {\url{https://ben.balter.com/2014/11/06/rules-of-communicating-at-github/}},
-  month = {November},
+  month = {nov},
   note = {[Online; accessed 03-04-2024]},
-  title = {{The 4 ways to run your unit tests in CI with Dockerfiles}},
+  title = {{The 4 Ways to Run Your Unit Tests in CI With Dockerfiles}},
   year = {2022},
 }
 
 @inproceedings{saroar2023developers,
-  title={{Developers’ Perception of GitHub Actions: A Survey Analysis}},
-  author={Saroar, Sk Golam and Nayebi, Maleknaz},
-  booktitle={{Proceedings of the 27th International Conference on Evaluation and Assessment in Software Engineering}},
-  pages={121--130},
-  year={2023},
-  doi={10.1145/3593434.3593475}
+  author = {Saroar, Sk Golam and Nayebi, Maleknaz},
+  booktitle = {{Proceedings of the 27th International Conference on Evaluation and Assessment in Software Engineering}},
+  doi = {10.1145/3593434.3593475},
+  pages = {121--130},
+  title = {{Developers' Perception of GitHub Actions: A Survey Analysis}},
+  year = {2023},
 }
 
 @inproceedings{bouzenia2024resource,
-  title={{Resource Usage and Optimization Opportunities in Workflows of GitHub Actions}},
-  author={Bouzenia, Islem and Pradel, Michael},
-  booktitle={{Proceedings of the 46th International Conference on Software Engineering}},
-  pages={1--12},
-  year={2024},
-  doi={10.1145/3597503.3623303}
+  author = {Bouzenia, Islem and Pradel, Michael},
+  booktitle = {{Proceedings of the 46th International Conference on Software Engineering}},
+  doi = {10.1145/3597503.3623303},
+  pages = {1--12},
+  title = {{Resource Usage and Optimization Opportunities in Workflows of GitHub Actions}},
+  year = {2024},
 }
 
 @inproceedings{vasilescu2015quality,
-  title={{Quality and Productivity Outcomes Relating to Continuous Integration in GitHub}},
-  author={Vasilescu, Bogdan and Yu, Yue and Wang, Huaimin and Devanbu, Premkumar and Filkov, Vladimir},
-  booktitle={{Proceedings of the 10th Joint Meeting on Foundations of Software Engineering}},
-  pages={805--816},
-  year={2015},
-  doi={10.1145/2786805.2786850}
+  author = {Vasilescu, Bogdan and Yu, Yue and Wang, Huaimin and Devanbu, Premkumar and Filkov, Vladimir},
+  booktitle = {{Proceedings of the 10th Joint Meeting on Foundations of Software Engineering}},
+  doi = {10.1145/2786805.2786850},
+  pages = {805--816},
+  title = {{Quality and Productivity Outcomes Relating to Continuous Integration in GitHub}},
+  year = {2015},
 }
 
 @inproceedings{weber2014makes,
-  title={{What Makes An Open Source Code Popular on GitHub?}},
-  author={Weber, Simon and Luo, Jiebo},
-  booktitle={{Proceedings of the International Conference on Data Mining Workshop}},
-  pages={851--855},
-  year={2014},
-  organization={IEEE},
-  doi={10.1109/ICDMW.2014.55}
+  author = {Weber, Simon and Luo, Jiebo},
+  booktitle = {{Proceedings of the International Conference on Data Mining Workshop}},
+  doi = {10.1109/ICDMW.2014.55},
+  organization = {IEEE},
+  pages = {851--855},
+  title = {{What Makes an Open Source Code Popular on GitHub?}},
+  year = {2014},
 }
 
 @article{ruhe2005art,
-  title={{The Art and Science of Software Release Planning}},
-  author={Ruhe, G{\"u}nther and Saliu, Moshood Omolade},
-  journal={{IEEE Software}},
-  volume={22},
-  number={6},
-  pages={47--53},
-  year={2005},
-  publisher={IEEE},
-  doi={10.1109/MS.2005.164}
+  author = {Ruhe, G{\"u}nther and Saliu, Moshood Omolade},
+  doi = {10.1109/MS.2005.164},
+  journal = {{IEEE Software}},
+  number = {6},
+  pages = {47--53},
+  publisher = {IEEE},
+  title = {{The Art and Science of Software Release Planning}},
+  volume = {22},
+  year = {2005},
 }
 
 @article{van1997software,
-  title={{Software Release Management}},
-  author={Van Der Hoek, Andre and Hall, Richard S. and Heimbigner, Dennis and Wolf, Alexander L.},
-  journal={{ACM SIGSOFT Software Engineering Notes}},
-  volume={22},
-  number={6},
-  pages={159--175},
-  year={1997},
-  publisher={ACM},
-  doi={10.1145/267896.267909}
+  author = {Van Der Hoek, Andre and Hall, Richard S. and Heimbigner, Dennis and Wolf, Alexander L.},
+  doi = {10.1145/267896.267909},
+  journal = {{ACM SIGSOFT Software Engineering Notes}},
+  number = {6},
+  pages = {159--175},
+  publisher = {ACM},
+  title = {{Software Release Management}},
+  volume = {22},
+  year = {1997},
 }
 
 @book{humble2010continuous,
@@ -792,181 +792,180 @@
 }
 
 @article{okumoto1979optimum,
-  title={{Optimum Release Time for Software Systems Based on Reliability and Cost Criteria}},
-  author={Okumoto, Kazu and Goel, Amrit L.},
-  journal={{Journal of Systems and Software}},
-  volume={1},
-  pages={315--318},
-  year={1979},
-  publisher={Elsevier},
-  doi={10.1016/0164-1212(79)90033-5}
+  author = {Okumoto, Kazu and Goel, Amrit L.},
+  doi = {10.1016/0164-1212(79)90033-5},
+  journal = {{Journal of Systems and Software}},
+  pages = {315--318},
+  publisher = {Elsevier},
+  title = {{Optimum Release Time for Software Systems Based on Reliability and Cost Criteria}},
+  volume = {1},
+  year = {1979},
 }
 
 @article{yamada1985cost,
-  title={{Cost-Reliability Optimal Release Policies for Software Systems}},
-  author={Yamada, Shigeru and Osaki, Shunji},
-  journal={{IEEE Transactions on Reliability}},
-  volume={34},
-  number={5},
-  pages={422--424},
-  year={1985},
-  publisher={IEEE},
-  doi={10.1109/TR.1985.5222222}
+  author = {Yamada, Shigeru and Osaki, Shunji},
+  doi = {10.1109/TR.1985.5222222},
+  journal = {{IEEE Transactions on Reliability}},
+  number = {5},
+  pages = {422--424},
+  publisher = {IEEE},
+  title = {{Cost-Reliability Optimal Release Policies for Software Systems}},
+  volume = {34},
+  year = {1985},
 }
 
 @inproceedings{khomh2012faster,
-  title={{Do Faster Releases Improve Software Quality? An Empirical Case Study of Mozilla Firefox}},
-  author={Khomh, Foutse and Dhaliwal, Tejinder and Zou, Ying and Adams, Bram},
-  booktitle={{Proceedings of the 9th Working Conference on Mining Software Repositories (MSR)}},
-  pages={179--188},
-  year={2012},
-  organization={IEEE},
-  doi={10.1109/MSR.2012.6224279}
+  author = {Khomh, Foutse and Dhaliwal, Tejinder and Zou, Ying and Adams, Bram},
+  booktitle = {{Proceedings of the 9th Working Conference on Mining Software Repositories (MSR)}},
+  doi = {10.1109/MSR.2012.6224279},
+  organization = {IEEE},
+  pages = {179--188},
+  title = {{Do Faster Releases Improve Software Quality? an Empirical Case Study of Mozilla Firefox}},
+  year = {2012},
 }
 
 @inproceedings{basili1996understanding,
-  title={{Understanding and Predicting the Process of Software Maintenance Releases}},
-  author={Basili, Victor and Briand, Lionel and Condon, Steven and Kim, Yong-Mi and Melo, Walc{\'e}lio L. and Valen, Jon D.},
-  booktitle={{Proceedings of 18th International Conference on Software Engineering}},
-  pages={464--474},
-  year={1996},
-  organization={IEEE},
-  doi={10.1109/ICSE.1996.493441}
+  author = {Basili, Victor and Briand, Lionel and Condon, Steven and Kim, Yong-Mi and Melo, Walc{\'e}lio L. and Valen, Jon D.},
+  booktitle = {{Proceedings of the 18th International Conference on Software Engineering}},
+  doi = {10.1109/ICSE.1996.493441},
+  organization = {IEEE},
+  pages = {464--474},
+  title = {{Understanding and Predicting the Process of Software Maintenance Releases}},
+  year = {1996},
 }
 
 @inproceedings{wu2022demystifying,
-  title={{Demystifying Software Release Note Issues on GitHub}},
-  author={Wu, Jianyu and He, Hao and Xiao, Wenxin and Gao, Kai and Zhou, Minghui},
-  booktitle={{Proceedings of the 30th International Conference on Program Comprehension}},
-  pages={602--613},
-  year={2022},
-  doi={10.1145/3524610.3527919}
+  author = {Wu, Jianyu and He, Hao and Xiao, Wenxin and Gao, Kai and Zhou, Minghui},
+  booktitle = {{Proceedings of the 30th International Conference on Program Comprehension}},
+  doi = {10.1145/3524610.3527919},
+  pages = {602--613},
+  title = {{Demystifying Software Release Note Issues on GitHub}},
+  year = {2022},
 }
 
 @inproceedings{borges2016popularity,
-  author={Borges, Hudson and Hora, Andre and Valente, Marco Tulio},
-  booktitle={{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
-  title={{Understanding the Factors That Impact the Popularity of GitHub Repositories}},
-  year={2016},
-  pages={334-344},
-  doi={10.1109/ICSME.2016.31}
+  author = {Borges, Hudson and Hora, Andre and Valente, Marco Tulio},
+  booktitle = {{Proceedings of the International Conference on Software Maintenance and Evolution (ICSME)}},
+  doi = {10.1109/ICSME.2016.31},
+  pages = {334--344},
+  title = {{Understanding the Factors That Impact the Popularity of GitHub Repositories}},
+  year = {2016},
 }
 
 @inproceedings{tsay2014influence,
-  title={{Influence of Social and Technical Factors for Evaluating Contribution in GitHub}},
-  author={Tsay, Jason and Dabbish, Laura and Herbsleb, James},
-  booktitle={{Proceedings of the 36th International Conference on Software Engineering}},
-  pages={356--366},
-  year={2014},
-  doi={10.1145/2568225.2568315}
+  author = {Tsay, Jason and Dabbish, Laura and Herbsleb, James},
+  booktitle = {{Proceedings of the 36th International Conference on Software Engineering}},
+  doi = {10.1145/2568225.2568315},
+  pages = {356--366},
+  title = {{Influence of Social and Technical Factors for Evaluating Contribution in GitHub}},
+  year = {2014},
 }
 
 @inproceedings{fang2020need,
-  title={{Need for Tweet: How Open Source Developers Talk About Their GitHub Work on Twitter}},
-  author={Fang, Hongbo and Klug, Daniel and Lamba, Hemank and Herbsleb, James and Vasilescu, Bogdan},
-  booktitle={{Proceedings of the 17th International Conference on Mining Software Repositories}},
-  pages={322--326},
-  year={2020},
-  doi={10.1145/3379597.3387466}
+  author = {Fang, Hongbo and Klug, Daniel and Lamba, Hemank and Herbsleb, James and Vasilescu, Bogdan},
+  booktitle = {{Proceedings of the 17th International Conference on Mining Software Repositories}},
+  doi = {10.1145/3379597.3387466},
+  pages = {322--326},
+  title = {{Need for Tweet: How Open Source Developers Talk About Their GitHub Work on Twitter}},
+  year = {2020},
 }
 
 @article{imtiaz2022open,
-  title={{Open or Sneaky? Fast or Slow? Light or Heavy? Investigating Security Releases of Open Source Packages}},
-  author={Imtiaz, Nasif and Khanom, Aniqa and Williams, Laurie},
-  journal={{IEEE Transactions on Software Engineering}},
-  volume={49},
-  number={4},
-  pages={1540--1560},
-  year={2022},
-  publisher={IEEE},
-  doi={10.1109/TSE.2022.3181010}
+  author = {Imtiaz, Nasif and Khanom, Aniqa and Williams, Laurie},
+  doi = {10.1109/TSE.2022.3181010},
+  journal = {{IEEE Transactions on Software Engineering}},
+  number = {4},
+  pages = {1540--1560},
+  publisher = {IEEE},
+  title = {{Open or Sneaky? Fast or Slow? Light or Heavy? Investigating Security Releases of Open Source Packages}},
+  volume = {49},
+  year = {2022},
 }
 
 @article{cheong2023ethical,
-  title={{Ethical Considerations Towards Protestware}},
-  author={Cheong, Marc and Kula, Raula Gaikovina and Treude, Christoph},
-  journal={{IEEE Software}},
-  year={2023},
-  publisher={IEEE},
-  doi={10.1109/MS.2023.3344778}
+  author = {Cheong, Marc and Kula, Raula Gaikovina and Treude, Christoph},
+  doi = {10.1109/MS.2023.3344778},
+  journal = {{IEEE Software}},
+  publisher = {IEEE},
+  title = {{Ethical Considerations Towards Protestware}},
+  year = {2023},
 }
 
 @inproceedings{lam2020putting,
-  title={{Putting the Semantics into Semantic Versioning}},
-  author={Lam, Patrick and Dietrich, Jens and Pearce, David J.},
-  booktitle={{Proceedings of the SIGPLAN International Symposium on New Ideas, New Paradigms, and Reflections on Programming and Software}},
-  pages={157--179},
-  year={2020},
-  doi={10.1145/3426428.3426922}
+  author = {Lam, Patrick and Dietrich, Jens and Pearce, David J.},
+  booktitle = {{Proceedings of the SIGPLAN International Symposium on New Ideas, New Paradigms, and Reflections on Programming and Software}},
+  doi = {10.1145/3426428.3426922},
+  pages = {157--179},
+  title = {{Putting the Semantics into Semantic Versioning}},
+  year = {2020},
 }
 
 @book{nygard2007release,
-  title={{Release It!: Design and Deploy Production-Ready Software}},
-  author={Nygard, Michael},
-  year={2007},
-  publisher={The Pragmatic Bookshelf}
+  author = {Nygard, Michael},
+  publisher = {The Pragmatic Bookshelf},
+  title = {{Release It!: Design and Deploy Production-Ready Software}},
+  year = {2007},
 }
 
 @book{mcconnell1998,
-  title={{Software Project Survival Guide}},
-  author={McConnell, Steve},
-  year={1998},
-  publisher={Microsoft Press},
-  doi={10.5555/270015}
+  author = {McConnell, Steve},
+  doi = {10.5555/270015},
+  publisher = {Microsoft Press},
+  title = {{Software Project Survival Guide}},
+  year = {1998},
 }
 
 @misc{stewart2002exploratory,
-  title={{An Exploratory Study of Factors Influencing the Level of Vitality and Popularity of Open Source Projects}},
-  author={Stewart, Katherine and Ammeter, Tony},
-  journal={Proceedings of the International Conference on Information Systems},
-  year={2002}
+  author = {Stewart, Katherine and Ammeter, Tony},
+  title = {{An Exploratory Study of Factors Influencing the Level of Vitality and Popularity of Open Source Projects}},
+  year = {2002},
 }
 
 @inproceedings{fang2022damn,
-  title={{``This Is Damn Slick!'' Estimating the Impact of Tweets on Open Source Project Popularity and New Contributors}},
-  author={Fang, Hongbo and Lamba, Hemank and Herbsleb, James and Vasilescu, Bogdan},
-  booktitle={{Proceedings of the 44th International Conference on Software Engineering}},
-  pages={2116--2129},
-  year={2022},
-  doi={10.1145/3510003.3510121}
+  author = {Fang, Hongbo and Lamba, Hemank and Herbsleb, James and Vasilescu, Bogdan},
+  booktitle = {{Proceedings of the 44th International Conference on Software Engineering}},
+  doi = {10.1145/3510003.3510121},
+  pages = {2116--2129},
+  title = {{``This Is Damn Slick!'' Estimating the Impact of Tweets on Open Source Project Popularity and New Contributors}},
+  year = {2022},
 }
 
 @article{borges2019developers,
-  title={{How Do Developers Promote Open Source Projects?}},
-  author={Borges, Hudson Silva and Valente, Marco Tulio},
-  journal={{Computer}},
-  volume={52},
-  number={8},
-  pages={27--33},
-  year={2019},
-  publisher={IEEE},
-  doi={0.1109/MC.2018.2888770}
+  author = {Borges, Hudson Silva and Valente, Marco Tulio},
+  doi = {0.1109/MC.2018.2888770},
+  journal = {{Computer}},
+  number = {8},
+  pages = {27--33},
+  publisher = {IEEE},
+  title = {{How Do Developers Promote Open Source Projects?}},
+  volume = {52},
+  year = {2019},
 }
 
 @inproceedings{trockman2018adding,
-  title={{Adding Sparkle to Social Coding: An Empirical Study of Repository Badges in the \textit{npm} Ecosystem}},
-  author={Trockman, Asher and Zhou, Shurui and K{\"a}stner, Christian and Vasilescu, Bogdan},
-  booktitle={{Proceedings of the 40th International Conference on Software Engineering}},
-  pages={511--522},
-  year={2018},
-  doi={10.1145/3180155.3180209}
+  author = {Trockman, Asher and Zhou, Shurui and K{\"a}stner, Christian and Vasilescu, Bogdan},
+  booktitle = {{Proceedings of the 40th International Conference on Software Engineering}},
+  doi = {10.1145/3180155.3180209},
+  pages = {511--522},
+  title = {{Adding Sparkle to Social Coding: An Empirical Study of Repository Badges in the \textit{npm} Ecosystem}},
+  year = {2018},
 }
 
 @inproceedings{borges2016predicting,
-  title={{Predicting the Popularity of GitHub Repositories}},
-  author={Borges, Hudson and Hora, Andre and Valente, Marco Tulio},
-  booktitle={{Proceedings of the 12th International Conference on Predictive Models and Data Analytics in Software Engineering}},
-  pages={1--10},
-  year={2016},
-  doi={10.1145/2972958.2972966}
+  author = {Borges, Hudson and Hora, Andre and Valente, Marco Tulio},
+  booktitle = {{Proceedings of the 12th International Conference on Predictive Models and Data Analytics in Software Engineering}},
+  doi = {10.1145/2972958.2972966},
+  pages = {1--10},
+  title = {{Predicting the Popularity of GitHub Repositories}},
+  year = {2016},
 }
 
 @inproceedings{fronchetti2019attracts,
-  title={{What Attracts Newcomers to Onboard on OSS Projects? TL;DR: Popularity}},
-  author={Fronchetti, Felipe and Wiese, Igor and Pinto, Gustavo and Steinmacher, Igor},
-  booktitle={{Proceedings of the 15th IFIP WG of the International Conference on Open Source Software}},
-  pages={91--103},
-  year={2019},
-  organization={Springer},
-  doi={10.1007/978-3-030-20883-7_9}
+  author = {Fronchetti, Felipe and Wiese, Igor and Pinto, Gustavo and Steinmacher, Igor},
+  booktitle = {{Proceedings of the 15th IFIP WG of the International Conference on Open Source Software}},
+  doi = {10.1007/978-3-030-20883-7_9},
+  organization = {Springer},
+  pages = {91--103},
+  title = {{What Attracts Newcomers to Onboard on OSS Projects? TL;DR: Popularity}},
+  year = {2019},
 }
