--- a/osbp.sty
+++ b/osbp.sty
@@ -34,6 +34,7 @@
 \RequirePackage[template,scheme=light]{ppt-slides}
 \RequirePackage[nocn,noframes]{ffcode}
 \RequirePackage{calc}
+\RequirePackage{underscore}
 \RequirePackage{soul}
 \RequirePackage{doi}
 \RequirePackage{footmisc}
