--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -59,13 +59,13 @@
   {felipe-fronchetti}
   {We found that \ul{popularity} of the project (in terms of stars), time to review pull requests, project age, and programming languages are the factors that best explain the newcomers' growth patterns.}
   {fronchetti2019attracts}
-\pitch{
-  \begin{multicols}{2}
-  \includegraphics[width=.8\linewidth]{ranking.png}
-  \par\columnbreak\par
-  ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
-  \source{fronchetti2019attracts}
-  \end{multicols}}
+% \pitch{
+%   \begin{multicols}{2}
+%   \includegraphics[width=.8\linewidth]{ranking.png}
+%   \par\columnbreak\par
+%   ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
+%   \source{fronchetti2019attracts}
+%   \end{multicols}}
 
 \thought{Put some badges.}
 
