--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -28,7 +28,7 @@
 \plush{\osbpTitlePage{8}{}}
 
 \pitch{
-  \pptBanner{Quick recap of previous lectures:}
+  \pptBanner{A quick recap of the previous lectures:}
   \begin{enumerate}[label=L\arabic*:]
     \setlength\itemsep{0em}
     \item Be nice, say ``Please,'' ``Thanks,'' and ``Sorry''
@@ -59,13 +59,13 @@
   {felipe-fronchetti}
   {We found that \ul{popularity} of the project (in terms of stars), time to review pull requests, project age, and programming languages are the factors that best explain the newcomers' growth patterns.}
   {fronchetti2019attracts}
-% \pitch{
-%   \begin{multicols}{2}
-%   \includegraphics[width=.8\linewidth]{ranking.png}
-%   \par\columnbreak\par
-%   ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
-%   \source{fronchetti2019attracts}
-%   \end{multicols}}
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=.8\linewidth]{ranking.png}
+  \source{fronchetti2019attracts}
+  \par\columnbreak\par
+  ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
+  \end{multicols}}
 
 \thought{Put some badges.}
 
@@ -78,6 +78,13 @@
   {asher-trockman}
   {A vast majority (88\%) agree with the statement `I consider the presence of badges in general to be an indicator of project \ul{quality}.'}
   {trockman2018adding}
+\pitch{
+  \begin{multicols}{2}
+  \includegraphics[width=.9\linewidth]{downloads.png}
+  \par\columnbreak\par
+  ``Packages with \ul{many badges} tend to have \ul{fewer downloads}. The effect for less popular packages is negligible.''
+  \source{trockman2018adding}
+  \end{multicols}}
 
 \thought{Keep the momentum.}
 
