--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -55,6 +55,12 @@
   \end{multicols}}
 
 \qte
+  [\nospell{Marco Tulio Valente}]
+  {marco-tulio-valente}
+  {We report that three out of four developers consider the \ul{number of stars} before using or contributing to a GitHub project.}
+  {borges2018s}
+
+\qte
   [\nospell{Felipe Fronchetti}]
   {felipe-fronchetti}
   {We found that \ul{popularity} of the project (in terms of stars), time to review pull requests, project age, and programming languages are the factors that best explain the newcomers' growth patterns.}
