--- a/main.bib
+++ b/main.bib
@@ -969,3 +969,14 @@
   title = {{What Attracts Newcomers to Onboard on OSS Projects? TL;DR: Popularity}},
   year = {2019},
 }
+
+@article{borges2018s,
+  title={{What's in a GitHub Star? Understanding Repository Starring Practices in a Social Coding Platform}},
+  author={Borges, Hudson and Valente, Marco Tulio},
+  journal={Journal of Systems and Software},
+  volume={146},
+  pages={112--129},
+  year={2018},
+  publisher={Elsevier},
+  doi={10.1016/j.jss.2018.09.016}
+}
