--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -105,6 +105,12 @@
   {We find that non-trivial \ul{badges}, which display the build status, test coverage, and up-to-dateness of dependencies, are mostly reliable signals, correlating with more tests, better pull requests, and fresher dependencies.}
   {trockman2018adding}
 
+\qte
+  [\nospell{Shaowei Wang}]
+  {shaowei-wang}
+  {The frequency/number of readme \ul{updates} and the number of \ul{lists} and \ul{links} positively correlate with the likelihood of a repository being popular.}
+  {wang2023study}
+
 \thought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
 
 \thought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
