--- a/main.bib
+++ b/main.bib
@@ -172,7 +172,7 @@
   journal = {{CALICO Journal}},
   pages = {7--26},
   publisher = {JSTOR},
-  title = {{Comparing Face-еo-Face and Electronic Discussion in the Second Language Classroom}},
+  title = {{Comparing Face-to-Face and Electronic Discussion in the Second Language Classroom}},
   year = {1995},
 }
 
@@ -371,7 +371,7 @@
   booktitle = {{Proceedings of the 10th Working Conference on Mining Software Repositories (MSR)}},
   organization = {IEEE},
   pages = {101--110},
-  title = {{Will My Patch Make It? and How Fast? Case Study on the Linux Kernel}},
+  title = {{Will My Patch Make It? And How Fast? Case Study on the Linux Kernel}},
   year = {2013},
 }
 
@@ -979,4 +979,14 @@
   year={2018},
   publisher={Elsevier},
   doi={10.1016/j.jss.2018.09.016}
+}
+
+@article{wang2023study,
+  title={{Study the Correlation Between the readme File of GitHub Projects and Their Popularity}},
+  author={Wang, Tianlei and Wang, Shaowei and Chen, Tse-Hsun Peter},
+  journal={{Journal of Systems and Software}},
+  volume={205},
+  year={2023},
+  publisher={Elsevier},
+  doi={10.1016/j.jss.2023.111806}
 }
