--- a/main.bib
+++ b/main.bib
@@ -820,7 +820,7 @@
   doi = {10.1109/MSR.2012.6224279},
   organization = {IEEE},
   pages = {179--188},
-  title = {{Do Faster Releases Improve Software Quality? an Empirical Case Study of Mozilla Firefox}},
+  title = {{Do Faster Releases Improve Software Quality? An Empirical Case Study of Mozilla Firefox}},
   year = {2012},
 }
 
@@ -971,22 +971,23 @@
 }
 
 @article{borges2018s,
-  title={{What's in a GitHub Star? Understanding Repository Starring Practices in a Social Coding Platform}},
-  author={Borges, Hudson and Valente, Marco Tulio},
-  journal={Journal of Systems and Software},
-  volume={146},
-  pages={112--129},
-  year={2018},
-  publisher={Elsevier},
-  doi={10.1016/j.jss.2018.09.016}
+  author = {Borges, Hudson and Valente, Marco Tulio},
+  doi = {10.1016/j.jss.2018.09.016},
+  journal = {{Journal of Systems and Software}},
+  pages = {112--129},
+  publisher = {Elsevier},
+  title = {{What's in a GitHub Star? Understanding Repository Starring Practices in a Social Coding Platform}},
+  volume = {146},
+  year = {2018},
 }
 
 @article{wang2023study,
-  title={{Study the Correlation Between the readme File of GitHub Projects and Their Popularity}},
-  author={Wang, Tianlei and Wang, Shaowei and Chen, Tse-Hsun Peter},
-  journal={{Journal of Systems and Software}},
-  volume={205},
-  year={2023},
-  publisher={Elsevier},
-  doi={10.1016/j.jss.2023.111806}
+  author = {Wang, Tianlei and Wang, Shaowei and Chen, Tse-Hsun Peter},
+  doi = {10.1016/j.jss.2023.111806},
+  journal = {{Journal of Systems and Software}},
+  publisher = {Elsevier},
+  title = {{Study the Correlation Between the Readme File of GitHub Projects and Their Popularity}},
+  volume = {205},
+  year = {2023},
 }
+
