--- a/main.bib
+++ b/main.bib
@@ -180,7 +180,7 @@
   author = {Ebert, Verena and Graziotin, Daniel and Wagner, Stefan},
   booktitle = {{Proceedings of the 26th International Conference on Evaluation and Assessment in Software Engineering}},
   pages = {40--49},
-  title = {{How Are Communication Channels on GitHub Presented to Their Intended Audience? --- A Thematic Analysis}},
+  title = {{How Are Communication Channels on GitHub Presented to Their Intended Audience? --- a Thematic Analysis}},
   year = {2022},
 }
 
@@ -229,7 +229,7 @@
   howpublished = {\url{https://www.yegor256.com/180724.html}},
   month = {jul},
   note = {[Online; accessed 07-02-2024]},
-  title = {{Either Bugs or Pull Requests ... or You Are Out}},
+  title = {{Either Bugs or Pull Requests... or You Are Out}},
   year = {2018},
 }
 
@@ -629,6 +629,7 @@
   author = {Prana, Gede Artha Azriadi and Treude, Christoph and Thung, Ferdian and Atapattu, Thushari and Lo, David},
   doi = {10.1007/s10664-018-9660-3},
   journal = {{Empirical Software Engineering}},
+  number = {1},
   pages = {1296--1327},
   publisher = {Springer},
   title = {{Categorizing the Content of GitHub README Files}},
@@ -795,6 +796,7 @@
   author = {Okumoto, Kazu and Goel, Amrit L.},
   doi = {10.1016/0164-1212(79)90033-5},
   journal = {{Journal of Systems and Software}},
+  number = {1},
   pages = {315--318},
   publisher = {Elsevier},
   title = {{Optimum Release Time for Software Systems Based on Reliability and Cost Criteria}},
@@ -886,8 +888,11 @@
   author = {Cheong, Marc and Kula, Raula Gaikovina and Treude, Christoph},
   doi = {10.1109/MS.2023.3344778},
   journal = {{IEEE Software}},
+  number = {1},
+  pages = {67--75},
   publisher = {IEEE},
   title = {{Ethical Considerations Towards Protestware}},
+  volume = {41},
   year = {2023},
 }
 
@@ -974,6 +979,7 @@
   author = {Borges, Hudson and Valente, Marco Tulio},
   doi = {10.1016/j.jss.2018.09.016},
   journal = {{Journal of Systems and Software}},
+  number = {1},
   pages = {112--129},
   publisher = {Elsevier},
   title = {{What's in a GitHub Star? Understanding Repository Starring Practices in a Social Coding Platform}},
@@ -985,6 +991,7 @@
   author = {Wang, Tianlei and Wang, Shaowei and Chen, Tse-Hsun Peter},
   doi = {10.1016/j.jss.2023.111806},
   journal = {{Journal of Systems and Software}},
+  number = {1},
   publisher = {Elsevier},
   title = {{Study the Correlation Between the Readme File of GitHub Projects and Their Popularity}},
   volume = {205},
