--- a/main.bib
+++ b/main.bib
@@ -180,7 +180,7 @@
   author = {Ebert, Verena and Graziotin, Daniel and Wagner, Stefan},
   booktitle = {{Proceedings of the 26th International Conference on Evaluation and Assessment in Software Engineering}},
   pages = {40--49},
-  title = {{How Are Communication Channels on GitHub Presented to Their Intended Audience? --- a Thematic Analysis}},
+  title = {{How Are Communication Channels on GitHub Presented to Their Intended Audience? --- A Thematic Analysis}},
   year = {2022},
 }
 
